--- a/code.html
+++ b/code.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion - VOIR PLUS OPTIC</title>
+    <title>Connexion - OPTIC'APP</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -243,12 +243,10 @@
             <div class="logo">
                 <img src="logo.png" alt="VOIR PLUS OPTIC Logo">
                 <h1>VOIR PLUS OPTIC</h1>
-                <p>Mon Espace</p>
             </div>
             
             <div class="login-header">
                 <h2>Connectez-vous</h2>
-                <p>Entrez vos identifiants pour accéder à votre espace</p>
             </div>
             
             <form id="login-form">
