--- a/code.html
+++ b/code.html
@@ -242,7 +242,7 @@
         <div class="login-box">
             <div class="logo">
                 <img src="logo.png" alt="VOIR PLUS OPTIC Logo">
-                <h1>VOIR PLUS OPTIC</h1>
+                <h1>OPTIC'APP</h1>
             </div>
             
             <div class="login-header">
