--- a/Accueil.html
+++ b/Accueil.html
@@ -1738,6 +1738,322 @@ input:checked + .toggle-slider:before {
     initial-value: 0deg;
     inherits: false;
 }
+/* ===== SYSTÈME DE VISIBILITÉ AVANCÉ ===== */
+
+/* Éléments masqués par défaut */
+.hidden-default {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Éléments masqués mais conservant l'espace */
+.hidden-transparent {
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+
+/* Démasquage au hover du parent */
+.hover-reveal:hover .hidden-default,
+.hover-reveal:hover .hidden-transparent {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+/* Démasquage au focus */
+.hidden-default:focus,
+.hidden-transparent:focus {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+/* Classes pour démasquer programmatiquement */
+.reveal-element {
+    opacity: 1 !important;
+    visibility: visible !important;
+    transform: translateY(0) !important;
+}
+
+.hide-element {
+    opacity: 0 !important;
+    visibility: hidden !important;
+    transform: translateY(20px) !important;
+}
+
+/* Démasquage progressif pour les listes */
+.stagger-reveal > * {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.5s ease;
+}
+
+.stagger-reveal.reveal-element > * {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* Délais pour effet stagger */
+.stagger-reveal > *:nth-child(1) { transition-delay: 0.1s; }
+.stagger-reveal > *:nth-child(2) { transition-delay: 0.2s; }
+.stagger-reveal > *:nth-child(3) { transition-delay: 0.3s; }
+.stagger-reveal > *:nth-child(4) { transition-delay: 0.4s; }
+.stagger-reveal > *:nth-child(5) { transition-delay: 0.5s; }
+
+/* ===== TOOLTIPS ET INFOBULLES MASQUÉS ===== */
+.tooltip-container {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip-content {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+    color: white;
+    padding: 0.75rem 1rem;
+    border-radius: var(--border-radius);
+    font-size: 0.8rem;
+    white-space: nowrap;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(10px);
+    transition: all 0.3s ease;
+    box-shadow: var(--shadow-lg);
+}
+
+/* Positions des tooltips */
+.tooltip-top {
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%) translateY(10px);
+}
+
+.tooltip-bottom {
+    top: 125%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-10px);
+}
+
+.tooltip-left {
+    right: 125%;
+    top: 50%;
+    transform: translateY(-50%) translateX(10px);
+}
+
+.tooltip-right {
+    left: 125%;
+    top: 50%;
+    transform: translateY(-50%) translateX(-10px);
+}
+
+/* Démasquage au hover */
+.tooltip-container:hover .tooltip-content {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) translateY(0);
+}
+
+.tooltip-container:hover .tooltip-left,
+.tooltip-container:hover .tooltip-right {
+    transform: translateY(-50%) translateX(0);
+}
+
+/* ===== MENUS DÉROULANTS MASQUÉS ===== */
+.dropdown-hidden {
+    position: absolute;
+    background: var(--card-bg);
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow-xl);
+    padding: 0.5rem 0;
+    min-width: 200px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-10px);
+    transition: all 0.3s ease;
+    z-index: 1000;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.dropdown-trigger:hover + .dropdown-hidden,
+.dropdown-hidden:hover {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+/* ===== BOUTONS D'ACTION MASQUÉS DANS LES TABLES ===== */
+.table-actions {
+    opacity: 0;
+    transform: translateX(10px);
+    transition: all 0.3s ease;
+    display: flex;
+    gap: 0.5rem;
+}
+
+tr:hover .table-actions {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+/* ===== BADGES DE STATUT MASQUÉS ===== */
+.status-indicator {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.3s ease;
+    display: inline-block;
+    margin-right: 0.5rem;
+}
+
+.status-available { background: var(--success-color); }
+.status-busy { background: var(--warning-color); }
+.status-offline { background: var(--gray-color); }
+
+.user-item:hover .status-indicator {
+    opacity: 1;
+    transform: scale(1.2);
+}
+
+/* ===== INFORMATIONS SUPPLÉMENTAIRES MASQUÉES ===== */
+.extra-info {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: all 0.4s ease;
+}
+
+.info-trigger:hover + .extra-info,
+.extra-info:hover {
+    max-height: 200px;
+    opacity: 1;
+    margin-top: 0.5rem;
+}
+
+/* ===== BOUTONS DE SCROLL MASQUÉS ===== */
+.scroll-to-top {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--gradient-primary);
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+    transition: all 0.3s ease;
+    box-shadow: var(--shadow-lg);
+    z-index: 100;
+}
+
+.scroll-to-top.visible {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+.scroll-to-top:hover {
+    transform: translateY(-5px);
+}
+
+/* ===== LOADERS ET ÉTATS DE CHARGEMENT ===== */
+.loading-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 10;
+}
+
+.loading-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* ===== PANEAUX LATERAUX MASQUÉS ===== */
+.side-panel {
+    position: fixed;
+    top: 0;
+    right: -400px;
+    width: 400px;
+    height: 100vh;
+    background: var(--card-bg);
+    box-shadow: var(--shadow-xl);
+    transition: right 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 1000;
+    padding: 2rem;
+}
+
+.side-panel.active {
+    right: 0;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 999;
+}
+
+.overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* ===== EFFETS DE RÉVÉLATION AU SCROLL ===== */
+.reveal-on-scroll {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.8s ease;
+}
+
+.reveal-on-scroll.revealed {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* ===== BOUTONS CONTEXTUELS MASQUÉS ===== */
+.contextual-actions {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    opacity: 0;
+    transform: translateX(20px);
+    transition: all 0.3s ease;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.card-modern:hover .contextual-actions {
+    opacity: 1;
+    transform: translateX(0);
+}
 </style>
 </head>
 <body>
