--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=code.html" />
+    <meta http-equiv="refresh" content="0; url=Acces.html" />
 </head>
 <body>
 
